<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.note.anonymous.brainsync.ListEntriesActivity">


    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"/>



    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item android:id="@+id/about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never"
        />
    <item android:id="@+id/deleteMenuButton"
        android:title="@string/menuDeleteButton"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_action_discard"
        />

</menu>
