<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:brainsync="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.note.anonymous.brainsync.DisplaySelectedItem">

    <item android:id="@+id/delete_menu_buttonSelectedItem"
        android:title="@string/menuDeleteButton"/>

    <item android:id="@+id/edit_menu_button"
        android:title="@string/edit_button"
        android:icon="@drawable/ic_action_edit"
        brainsync:showAsAction="always"/>

    <item android:id="@+id/action_settings"
        android:title="@string/title_activity_settings"/>

    <item
        android:id="@+id/menu_item_share"
        brainsync:showAsAction="ifRoom"
        android:title="Share"
        android:actionProviderClass=
            "android.widget.ShareActionProvider"/>



</menu>
