<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anonymous.brainsync.SuccessActivity">

    <TextView android:text="@string/success" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"


        android:id="@+id/success"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="151dp" />

       <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_entry"
        android:layout_below="@+id/success"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:id="@+id/addnewentry"
        android:onClick="addNewEntryMethod"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnhome"
        android:text="@string/return_home"
        android:layout_below="@+id/addnewentry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:onClick="returnHomeMethod"
        />



</RelativeLayout>
