<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"

    tools:context=".MainActivity">


    <ImageView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:weightSum="1"
        android:background="@color/blue"
        android:id="@+id/topbanner"
        android:src="@drawable/mainimage"

       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbanner"
        android:text="@string/add_entry"
        android:textSize="25sp"
        android:background="@color/green"
        android:id="@+id/entry_button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="addEntry"

        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/entry_button"
        android:id="@+id/middlebuttons"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        
        <Button
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:text="@string/what_do_i_know"
            android:textSize="20dp"

/>

        <Button
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:text="@string/search_my_brain"
            android:textSize="20sp"
            android:onClick="goSearch"


            />


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/middlebuttons"
        android:orientation="horizontal"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_settings"
            android:onClick="goSettings"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middlebuttons"
            android:text="@string/list_all_entry"
            android:onClick="listEntriesMethod"
            />

        </LinearLayout>




</RelativeLayout>
