<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectAllButtonLableDropboxActivity"
            android:id="@+id/buttonSelectAll"
            android:layout_below="@+id/lableDropBoxActivity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backupButtonLableDropboxActivity"
            android:id="@+id/buttonBackUP"
            android:layout_below="@+id/lableDropBoxActivity"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="backup"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textLable"
            android:id="@+id/lableDropBoxActivity"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/dropboxSyncList"
        android:clickable="true">


    </ListView>



</LinearLayout>