<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.anonymous.brainsync.Feedback">

    <TextView android:text="@string/contactus" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactustext"
        android:textSize="20sp" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/contactustext"
        android:hint="@string/reporttext"
        android:gravity="top"
        android:id="@+id/issuetext" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Add Screenshots of Issue (Optional)"
        android:id="@+id/imageinfo"
        android:layout_below="@id/issuetext"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/imageinfo"
        android:id="@+id/imagebuttons">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:background="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="visible"
            android:id="@+id/firstimage"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:id="@+id/secondimage"
            />

        <ImageView
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:id="@+id/thirdimage"
            />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendreport"
        android:layout_below="@id/imagebuttons"
        android:onClick="sendReport"
        android:id="@+id/reportbutton"/>



</RelativeLayout>
